# gcms_data_analysis

./: .gitignore  .readthedocs.yaml  README.md  e  license  paper.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: pytest.yml
RCSdata/: RCS_gcms_data_analysis.py
RCSdata/data/: A_2.txt  A_3.txt  Ader_1.txt  Ader_2.txt  Ader_3.txt  B_1.txt  B_2.txt  B_3.txt  calibration88.xlsx  compounds_properties.xlsx  deriv_calibration11.xlsx  deriv_compounds_properties.xlsx  files_info.xlsx
docs/: conf.py  gcms_data_analysis.rst  index.rst  modules.rst  requirements.txt
docs/source/: gcms_data_analysis.rst  modules.rst
example/: example_gcms_data_analysis.py  example_minimal_case.py
example/data/: A_1.txt  A_2.txt  Ader_1.txt  Ader_2.txt  B_1.txt  B_2.txt  SearchSubsNames.xlsx  calibration.xlsx  classifications_codes_fractions.xlsx  compounds_properties.xlsx  deriv_calibration.xlsx  deriv_compounds_properties.xlsx  files_info.xlsx
example/name_to_properties/: example_name_to_properties.py  ssss.xlsx
example/output/: files_info.xlsx
examples/: example_minimal_case.py
examples/data/: B_1.txt  calibration.xlsx  deriv_calibration.xlsx  files_info.xlsx
examples/data_minimal_case/: S_2.txt  T_1.txt  T_3.txt  classifications_codes_fractions.xlsx  (+1 more)
gcms_data_analysis/: __init__.py  main.py
paper_files/: paper.bib
scripts/: pandoc_command.txt  script_to_update_readme.py  utils.py
tests/: conftest.py  example.py  test_fragmenter.py  test_gcms_data_analysis.py  test_loading_functions.py  test_minimal_case.py  test_name_to_properties.py  test_project_class.py
(+54 files in other folders)
